# mr

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/: main.go
cmd/command/: container.go  root.go  xet.go
pkg/image/: image_linux.go
pkg/util/: sys.go  util.go
src/: lib.rs  main.rs
src/command/: container.rs  mod.rs  root.rs  set.rs
src/util/: error.rs  mod.rs  sys.rs
