[package]
name = "mr"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clap_builder =  { version = "4.5.7" }
lazy_static = "1.4"
sysinfo = "0.30.12"
rustix =   { version = "0.38.34", features=["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
